[package]
name = "hmac-sha256"
version = "1.1.7"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A small, self-contained SHA256 and HMAC-SHA256 implementation"
keywords = ["hash", "hmac", "sha2", "sha256", "hkdf"]
repository = "https://github.com/jedisct1/rust-hmac-sha256"
homepage = "https://github.com/jedisct1/rust-hmac-sha256"
categories = ["algorithms", "cryptography", "no-std"]
license = "ISC"

[dependencies]
digest09 = { package = "digest", version = "0.9.0", optional = true }
digest010 = { package = "digest", version = "0.10.7", features = ["oid"], optional = true }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["r1cs", "commitment", "crh", "signature", "prf", "encryption"]}
#ark-bn254 = { version = "0.4.0", default-features = true }
ark-bls12-377 = { version = "0.4.0", default-features = true }
ark-std = { version = "0.4.0", default-features = true }
ark-serialize = { version = "0.4.0", default-features = true }
ark-ff = { version = "0.4.0", default-features = true }
ark-r1cs-std = { version = "0.4.0", default-features = true }
ark-relations = { version = "0.4.0", default-features = true }
[features]
default = []
opt_size = []
traits = ["traits09", "traits010"]
traits09 = ["digest09"]
traits010 = ["digest010"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3
